log
Wed 12 Apr 2023 10:18:48 PM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
6f8a2c6
Wed 12 Apr 2023 10:19:29 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:30: error: too few arguments to function ‘calloc’
   56 |     map->buckets = (Pair **) calloc (sizeof(Pair *));
      |                              ^~~~~~
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:543:14: note: declared here
  543 | extern void *calloc (size_t __nmemb, size_t __size)
      |              ^~~~~~
Compilation failed
207bee7
Wed 12 Apr 2023 10:19:51 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
d08d7c8
Wed 12 Apr 2023 10:22:49 PM UTC: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
5e207e5
Wed 12 Apr 2023 10:24:15 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
d6d94c4
Wed 12 Apr 2023 10:24:33 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
c6f6fed
Wed 12 Apr 2023 10:43:38 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
4f2332b
Wed 12 Apr 2023 11:01:40 PM UTC: 
 hashmap.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
 tests:  0|0
a9d31b6
Wed 12 Apr 2023 11:02:07 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
d38b8c5
Wed 12 Apr 2023 11:02:40 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
90cebd2
Wed 12 Apr 2023 11:02:52 PM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
1cb02da
Wed 12 Apr 2023 11:05:02 PM UTC: 
 hashmap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  0|0
24a70eb
Wed 12 Apr 2023 11:08:35 PM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
1f1a702
Wed 12 Apr 2023 11:09:03 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
c8c69a5
Wed 12 Apr 2023 11:09:16 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
e4ac4d9
Wed 12 Apr 2023 11:09:48 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
7d643dd
Wed 12 Apr 2023 11:10:22 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8c0729f
Wed 12 Apr 2023 11:10:34 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
5ec2737
Wed 12 Apr 2023 11:11:15 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
76babfc
Wed 12 Apr 2023 11:13:42 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d53e797
Wed 12 Apr 2023 11:24:14 PM UTC: 
 hashmap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  2|5
total_score: 20/70
3aa091c
Wed 12 Apr 2023 11:25:45 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 10/70
d76d035
Wed 12 Apr 2023 11:27:25 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
288cb40
Wed 12 Apr 2023 11:30:30 PM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  2|5
total_score: 20/70
b963a65
Wed 12 Apr 2023 11:30:36 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
db4c978
Wed 12 Apr 2023 11:32:01 PM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 10/70
40f31ec
Wed 12 Apr 2023 11:32:49 PM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
dae9912
Wed 12 Apr 2023 11:49:28 PM UTC: 
 hashmap.c | 23 +++++++----------------
 1 file changed, 7 insertions(+), 16 deletions(-)
 tests:  2|5
total_score: 10/70
11282cf
Wed 12 Apr 2023 11:50:23 PM UTC: 
 hashmap.c | 14 ++++++--------
 1 file changed, 6 insertions(+), 8 deletions(-)
 tests:  2|5
total_score: 10/70
c8cb1c7
Wed 12 Apr 2023 11:51:34 PM UTC: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  5|4
total_score: 30/70
afde02d
Wed 12 Apr 2023 11:58:43 PM UTC: 
 hashmap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  6|4
total_score: 30/70
cd58faf
Wed 12 Apr 2023 11:59:56 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 30/70
31342aa
Thu 13 Apr 2023 12:00:11 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:115:1: error: control reaches end of non-void function [-Werror=return-type]
  115 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
fe0e2d4
Thu 13 Apr 2023 12:02:18 AM UTC: 
 hashmap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:116:1: error: control reaches end of non-void function [-Werror=return-type]
  116 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
08f025d
